[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "optimus-jbscorer"
version = "0.1.0"
description = "Two-dimensional jailbreak scoring metric for LLM safety evaluation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Ismail Hossain", email = "you@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/ismail102/optimus-jbscorer"
